# BudgetVoyager

./: .gitignore  CMakeLists.txt  README.md  run_main  run_main.cpp  run_tests  run_tests.cpp
docs/: designPlan.md  flixbusCities.md
docs/tutorials/: QML.md  boost.md  findall.md  pyTest.md  regex.md  robotTxt.md  webscraping.md
input/: FromInputBox.qml  GUI.py  ToInputBox.qml  UtilityFunctions.qml  _can_webscrape.py  main.qml
input/GUI/: DepartureDateBox.qml  FromInputBox.qml  GUI.py  RouteInputForm.qml  ToInputBox.qml  UtilityFunctions.qml  main.qml
input/GUI/components/: DeparturePopup.qml  DisplayResults.qml  LabelledDateInput.qml  LabelledTextInput.qml  LocationPopup.qml  SearchBox.qml  TitleBanner.qml
input/GUI/utilities/: UtilityFunctions.qml
input/GUI/views/: DepartureDateInput.qml  LocationInput.qml
input/assets/: location_picture.jpg:Zone.Identifier
input/flixbus/: api_utils.py  bus_stops.json  bus_stops_template.json  data_tree_builder.py  flixbus_ID.json  flixbus_tree.json  route_details.py  route_details_temp.json
input/flixbus_tree/: create_flixbus_tree.py  flixbus_ID.json
run/: run_GUI  run_GUI.cpp  run_main.cpp  run_tests  run_tests.cpp  tempCodeRunnerFile
src/: main.py
tests/catch/: some_test.cpp
tests/pytest/: can_webscrapeOP.py  hayle_nearby.json  test_can_webscrape.py  test_flixbus_scrape.py  test_flixbus_tree.py  test_main.py
tests/pytest/GUI/: test_GUI.py  test_UtilityFunctions.py
tests/pytest/flixbus/: route1_example.json  route2_example.json  test_api_utils.py  test_data_tree_builder.py  test_route_details.py
